--- a/angular13/src/app/company/records/records.component.html
+++ b/angular13/src/app/company/records/records.component.html
@@ -4,9 +4,9 @@
         <tab heading="MEDIDAS" class="col-12">
             <measure-insert></measure-insert>
         </tab>
-        <tab heading="CATEGORIAS" class="col-12">
+        <!-- <tab heading="CATEGORIAS" class="col-12">
             <category-insert></category-insert>
-        </tab>
+        </tab> -->
         <tab heading="PRODUTOS" class="col-12">
             <product-insert></product-insert>
         </tab>
