--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -30,7 +30,7 @@
                   data-bs-dismiss="offcanvas">Produtos</span></a></li>
 
                         <div class="pt-1"></div>
-                        <li><a><i class="bi bi-tags"></i> <span class="item-text" [routerLink]="['/catadm']"
+                        <li><a><i class="bi bi-tags"></i> <span class="item-text" [routerLink]="['/catlist']"
                   data-bs-dismiss="offcanvas">Categoria</span></a>
                         </li>
                         <div class="pt-1"></div>
