--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.css
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.css
@@ -6,3 +6,12 @@
      border-radius: 10px;
      border: 1px solid rgba( 255, 255, 255, 0.18);
  }
+
+ #searchbadge {
+     width: 50%;
+     border-radius: 50px;
+ }
+
+ #searchinput {
+     border-radius: 50px;
+ }
