--- a/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
+++ b/angular13/src/app/company/product/product-pagelist/product-pagelist.component.html
@@ -4,13 +4,28 @@
             PRODUTOS
         </div>
         <div class="pt-4"></div>
-        <label style="font-size: 30px;">Pesquisar</label>
 
-        <section class="bg-warning" style="width:525px; height: 60px; border-radius: 15px;">
+        <div class="container">
+            <div class="row">
+                <table class="col-12">
 
-            <input class="form-control" (input)="this._ProductServices.filterProducts($event)" type="text" style="width:500px; margin-top: 10px;">
+                    <label style="font-size: 30px;">Pesquisar</label>
+                    <tr class="col-12">
+                        <td class="col-12">
 
-        </section>
+                            <span id="searchbadge" class="badge bg-warning">
+
+                              <input  id="searchinput" class="form-control"
+                  (input)="this._ProductServices.filterProducts($event)">
+              </span>
+                        </td>
+                        <td class="col-6 ">
+                            <button tooltip="Cadastrar um novo Produto." class="btn btn-outline-warning bi bi-plus" style="font-size: 35px; float: right;" [routerLink]="['/prodinsert']"></button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
     <div class="mt-3"></div>
     <div class="row">
