--- a/angular13/src/app/company/records/records.component.html
+++ b/angular13/src/app/company/records/records.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="pt-3"></div>
     <tabset>
-        <tab heading="MEDIDAS" class="col-12">
+        <!-- <tab heading="MEDIDAS" class="col-12">
             <measure-insert></measure-insert>
-        </tab>
+        </tab> -->
         <!-- <tab heading="CATEGORIAS" class="col-12">
             <category-insert></category-insert>
         </tab> -->
