--- a/angular13/src/app/company/measure/measure-insert/measure-insert.component.html
+++ b/angular13/src/app/company/measure/measure-insert/measure-insert.component.html
@@ -5,52 +5,44 @@
                 <h1 style="text-align: center; margin-top: 20px;">MEDIDA</h1>
             </div>
             <div>
-                <div>
-                    <!-- <div class="p-5"></div> -->
-                    <form [formGroup]="this._MeaServices.formInsert" class="form-group" class="col-12">
 
-                        <div class="col">
-                            <label>Medida</label>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="text" class="form-control" formControlName="name" [ngClass]="{'is-invalid': _MeaServices._ValidatorsSrv.touchedErrors('name', _MeaServices.formInsert)}">
-                                        <div class="invalid-feedback">
-                                            {{_MeaServices._ValidatorsSrv.required2(this._MeaServices.formInsert, 'name', 'Nome', 3, 50)}}
-                                            <!-- OLD VERSION  {{_MeaServices._ValidatorsSrv.required(this._MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
-                                        </div>
+                <form [formGroup]="this.MeaServices.formInsert" class="form-group" class="col-12">
+
+                    <div class="col">
+                        <label>Medida</label>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" class="form-control" formControlName="name" [ngClass]="{'is-invalid': MeaServices._ValidatorsSrv.touchedErrors('name', MeaServices.formInsert)}">
+                                    <div class="invalid-feedback">
+                                        {{MeaServices._ValidatorsSrv.required2(this.MeaServices.formInsert, 'name', 'Nome', 3, 50)}}
+                                        <!-- OLD VERSION  {{MeaServices._ValidatorsSrv.required(this.MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
-                            <label>Descrição</label>
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="text" class="form-control" formControlName="description" [ngClass]="{'is-invalid': _MeaServices._ValidatorsSrv.touchedErrors('description', _MeaServices.formInsert)}">
-                                        <div class="invalid-feedback">
-                                            {{_MeaServices._ValidatorsSrv.required2(this._MeaServices.formInsert, 'description', 'Descrição', 3, 250)}}
-                                            <!-- OLD VERSION  {{_MeaServices._ValidatorsSrv.required(this._MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
-                                        </div>
-
+                    </div>
+                    <div class="col">
+                        <label>Descrição</label>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col">
+                                    <input type="text" class="form-control" formControlName="description" [ngClass]="{'is-invalid': MeaServices._ValidatorsSrv.touchedErrors('description', MeaServices.formInsert)}">
+                                    <div class="invalid-feedback">
+                                        {{MeaServices._ValidatorsSrv.required2(this.MeaServices.formInsert, 'description', 'Descrição', 3, 250)}}
+                                        <!-- OLD VERSION  {{MeaServices._ValidatorsSrv.required(this.MeaServices.formInsert,'name', 'Preenchimento, mínimo de pelo menos 3 caracteres', 'Preenchimento não pode ultrapassar 50 caracteres.', 'Nome é de preenchimento obrigatório')}} -->
                                     </div>
+
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="mt-5" style="border-top: 1px solid black; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 197, 7, 0.6);" id="hor"></div>
-                        <div class="mb-5"></div>
-                        <div class="p-3">
-                            <button [disabled]="!this._MeaServices.formInsert.valid" id="label" class="btn btn-warning btn-lg" style="color:rgb(0, 0, 0); float: right;" (click)="_MeaServices.save()">Cadastrar</button>
+                    <div class="pt-3"></div>
+                    <button [disabled]="!this.MeaServices.formInsert.valid" id="label" class="btn btn-warning btn-lg" style="color:rgb(0, 0, 0); float: right;" (click)="MeaServices.save()">Cadastrar</button>
+                    <div class="pt-3"></div>
 
-                            <br>
-                            <br>
-                        </div>
-                    </form>
-
-                </div>
-
+                </form>
             </div>
 
         </div>
