--- a/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
+++ b/angular13/src/app/company/shared/components/side-nav/side-nav.component.html
@@ -21,8 +21,8 @@
                             </div>
                         </div>
                         <div class="justify-content-center" style="text-align:center;">
-                            <h1 style="text-align:center;">MINAS AR</h1>
-                            <small>Compresssores</small>
+                            <h2 style="text-align:center;">Organizador</h2>
+                            <small>Estoque</small>
                         </div>
                         <br>
                         <hr>
